adaptive 1 and 2 blocks for all devices

--- a/src/sass/blocks/_header.sass
+++ b/src/sass/blocks/_header.sass
@@ -4,6 +4,8 @@
     align-items: center
     &__logo
         width: 25%
+        &_hidden
+            display: none
         img
             width: 100%
     &__official
