--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -7,6 +7,7 @@
 @import "blocks/descr"
 @import "blocks/title"
 @import "blocks/reasons"
+@import "blocks/media"
 *
     font-family: 'Museo Sans Cyrl', sans-serif
 .container
