add consultation and adaptiv for 768px

--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -8,8 +8,11 @@
 @import "blocks/title"
 @import "blocks/reasons"
 @import "blocks/media"
+@import "blocks/consultation"
+@import "blocks/form"
 *
     font-family: 'Museo Sans Cyrl', sans-serif
 .container
+    position: relative
     width: 950px
     margin: 0 auto
