--- a/src/sass/blocks/_buttons.sass
+++ b/src/sass/blocks/_buttons.sass
@@ -14,3 +14,13 @@
         width: 300px
         height: 50px
         font-size: 16px
+    &_form
+        width: 300px
+        height: 55px
+        border-radius: 5px
+        background-color: #c70101
+        color: #ffffff
+        font-size: 16px
+        font-weight: 400
+        text-transform: uppercase
+        margin-top: 20px
