--- a/src/sass/blocks/_media.sass
+++ b/src/sass/blocks/_media.sass
@@ -35,6 +35,16 @@
         margin-top: 10px
         font-size: 13px
 
+    .consultation
+        padding: 70px 0 62px 0
+        .title_left
+            font-size: 29px
+            line-height: 40px
+        .consultation__subtitle
+            margin-top: 50px
+        .button
+            margin-top: 30px
+
 @media (max-width: 767px)
     .header
         &__official
@@ -86,6 +96,16 @@
         .descr
             text-align: left
             margin-left: 20px
+                
+        .consultation
+            padding: 40px 0 32px 0
+            .title_left
+                font-size: 29px
+                line-height: 40px
+            .consultation__subtitle
+                margin-top: 50px
+            .button
+                margin-top: 30px
 
 @media (max-width: 575px)
     .header
