--- a/src/sass/blocks/_title.sass
+++ b/src/sass/blocks/_title.sass
@@ -3,3 +3,9 @@
     font-size: 30px
     font-weight: 400
     text-align: center
+    text-transform: uppercase
+    &_left
+        color: #ffffff
+        font-size: 36px
+        text-align: left
+        line-height: 45px
