--- a/src/sass/blocks/_media.sass
+++ b/src/sass/blocks/_media.sass
@@ -97,15 +97,24 @@
             text-align: left
             margin-left: 20px
                 
-        .consultation
-            padding: 40px 0 32px 0
-            .title_left
-                font-size: 29px
-                line-height: 40px
-            .consultation__subtitle
-                margin-top: 50px
-            .button
-                margin-top: 30px
+    .consultation
+        min-height: 580px
+        padding: 50px 0 42px 0
+        .feed-form
+            margin: 0 auto
+        .title_left
+            font-size: 23px
+            line-height: 35px
+            text-align: center
+        .consultation__subtitle
+            margin-top: 30px
+            text-align: center
+        .button
+            margin-top: 30px
+            &_form
+                width: 300px
+                height: 50px
+                font-size: 16px
 
 @media (max-width: 575px)
     .header
@@ -161,3 +170,16 @@
         .descr
             margin-top: 6px
             font-size: 12px
+        
+    .consultation
+        padding: 40px 0 32px 0
+        .feed-form
+            width: 90%
+        .title_left
+            font-size: 20px
+        .consultation__subtitle
+            font-size: 15px
+        .button
+            &_form
+                width: 100%
+                font-size: 15px
