--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -9,6 +9,7 @@
 @import "blocks/reasons"
 @import "blocks/consultation"
 @import "blocks/form"
+@import "blocks/carousel"
 @import "blocks/media"
 *
     font-family: 'Museo Sans Cyrl', sans-serif
