add tabs. need fix all items and add work of tabs

--- a/src/sass/blocks/_buttons.sass
+++ b/src/sass/blocks/_buttons.sass
@@ -24,3 +24,10 @@
         font-weight: 400
         text-transform: uppercase
         margin-top: 20px
+    &_catalog
+        width: 131px
+        height: 40px
+        border-radius: 5px
+        font-size: 14px
+        font-weight: 500
+        text-transform: uppercase
