--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -10,8 +10,10 @@
 @import "blocks/consultation"
 @import "blocks/form"
 @import "blocks/carousel"
+@import "blocks/catalog"
 @import "blocks/media"
 *
+    box-sizing: border-box
     font-family: 'Museo Sans Cyrl', sans-serif
 .container
     position: relative
