--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -11,6 +11,7 @@
 @import "blocks/form"
 @import "blocks/carousel"
 @import "blocks/catalog"
+@import "blocks/reviews"
 @import "blocks/media"
 *
     box-sizing: border-box
