add all site and adaptiv, add all modal windows and add js

--- a/src/sass/blocks/_consultation.sass
+++ b/src/sass/blocks/_consultation.sass
@@ -1,6 +1,6 @@
 .consultation
     min-height: 650px
-    background: url("../../images/consultation/background.png") center center/cover no-repeat
+    background: url("../images/consultation/background.png") center center/cover no-repeat
     padding: 100px 0 92px 0
     &__subtitle
         margin-top: 80px
@@ -8,3 +8,11 @@
         font-size: 20px
         font-weight: 400
         line-height: 25px
+    .error
+        border: 2px solid red
+    label.error
+        border: none
+        font-size: 14px
+        margin-left: 5px
+        margin-top: 5px
+        color: #fff
