--- a/src/sass/blocks/_form.sass
+++ b/src/sass/blocks/_form.sass
@@ -2,6 +2,8 @@
     width: 300px
     display: flex
     flex-direction: column
+    &_mgt25
+        margin-top: 25px
     input
         height: 50px
         margin-top: 15px
@@ -14,4 +16,7 @@
         line-height: 66px
         &:nth-child(1)
             margin-top: 36px
+    input::-webkit-outer-spin-button,
+    input::-webkit-inner-spin-button
+        -webkit-appearance: none
             
