--- a/src/sass/blocks/_header.sass
+++ b/src/sass/blocks/_header.sass
@@ -26,3 +26,6 @@
         color: #ffffff
         font-size: 18px
         font-weight: 400
+        &:hover
+            text-decoration: none
+            color: #fff
