--- a/src/sass/blocks/_media.sass
+++ b/src/sass/blocks/_media.sass
@@ -76,6 +76,12 @@
                 margin-top: 12px
                 font-size: 15px
                 line-height: 20px
+    
+    .footer
+        height: 450px
+        &__info
+            width: 450px
+            height: 250px
 
 @media (max-width: 767px)
     .header
@@ -212,6 +218,13 @@
                 line-height: 18px
         hr
             margin-top: 30px
+    
+    .footer
+        height: 400px
+        &__info
+            width: 410px
+            height: 240px
+            padding: 30px 38px 30px 38px
 
 @media (max-width: 575px)
     .header
@@ -367,3 +380,16 @@
                 text-align: justify
         hr
             margin-top: 20px
+    
+    .footer
+        height: 350px
+        &__info
+            width: 255px
+            height: 190px
+            padding: 10px 18px 10px 18px
+        &__address
+            font-size: 20px
+            margin-bottom: 18px
+            text-align: center
+        &__phone
+            margin-bottom: 20px
