--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -12,6 +12,8 @@
 @import "blocks/carousel"
 @import "blocks/catalog"
 @import "blocks/reviews"
+@import "blocks/footer"
+@import "blocks/modal"
 @import "blocks/media"
 *
     box-sizing: border-box
